--- a/OpenEdXMobile/res/values/colors.xml
+++ b/OpenEdXMobile/res/values/colors.xml
@@ -52,7 +52,8 @@
 
     <!--  Colors defined by edX Pattern Library at http://ux.edx.org/design_elements/colors/ -->
     <color name="edx_brand_primary_dark">#065683</color>
-    <color name="edx_brand_primary_base">#0075B4</color>
+    <!-- <color name="edx_brand_primary_base">#0075B4</color>   -->
+    <color name="edx_brand_primary_base">#FF5722</color>
     <color name="edx_brand_primary_accent">#2991C3</color>
     <color name="edx_brand_primary_back">#CCE3F0</color>
     <color name="edx_brand_primary_x_back">#F2F8FB</color>
