--- a/OpenEdXMobile/res/layout/activity_launch.xml
+++ b/OpenEdXMobile/res/layout/activity_launch.xml
@@ -10,7 +10,7 @@
         android:splitMotionEvents="false">
 
         <ImageView
-            android:id="@+id/edx_logo"
+            android:id="@+id/bnmit_logo"
             android:layout_width="273dp"
             android:layout_height="279dp"
             android:layout_centerHorizontal="true"
@@ -26,7 +26,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="25dp"
             android:layout_marginRight="50dp"
-            android:layout_marginBottom="146dp"
+            android:layout_marginBottom="42dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -57,6 +57,15 @@
                 android:text="@string/already_have_an_account"
                 android:textColor="@android:color/white"
                 android:textSize="15sp" />
+
+            <ImageView
+                android:id="@+id/vrook_logo"
+                android:layout_width="211dp"
+                android:layout_height="63dp"
+                android:layout_marginTop="60dp"
+                android:contentDescription="@string/phonetic_app_name"
+                android:src="@drawable/vrook_logo" />
+
         </LinearLayout>
 
     </RelativeLayout>
